--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,15 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Workspace\\Ky4\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Libraryy\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Workspace\\Ky4\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Libraryy\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=C:\\Workspace\\Ky4\\jaxb-api-2.1.jar
+file.reference.jaxb-api-2.1.jar-1=D:\\Libraryy\\jaxb-api-2.1.jar
 file.reference.jbcrypt-0.4.jar=E:\\jbcrypt-0.4.jar
+file.reference.jbcrypt-0.4.jar-1=D:\\jbcrypt-0.4.jar
 file.reference.mysql-connector-j-9.1.0.jar=C:\\Workspace\\Ky4\\mysql-connector-j-9.1.0.jar
+file.reference.mysql-connector-j-9.1.0.jar-1=D:\\Libraryy\\mysql-connector-j-9.1.0.jar
 file.reference.sqljdbc42.jar=C:\\Workspace\\Ky4\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
@@ -47,7 +52,12 @@ javac.classpath=\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.jbcrypt-0.4.jar}
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar-1}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
+    ${file.reference.jbcrypt-0.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
