Update 10/2 Verify register by sending mail (Hai)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ nbproject/
 
 # Các file hệ thống của Windows
 Thumbs.db
+
+# Ignore tất cả các tệp .properties
+*.properties
+
+# Ignore tất cả các tệp .xml
+*.xml
