--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\SWP SP25\\lib\\activation-1.1.1.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Workspace\\Ky4\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Libraryy\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Workspace\\Ky4\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Libraryy\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=C:\\SWP SP25\\lib\\javax.mail.jar
 file.reference.jaxb-api-2.1.jar=C:\\Workspace\\Ky4\\jaxb-api-2.1.jar
 file.reference.jaxb-api-2.1.jar-1=D:\\Libraryy\\jaxb-api-2.1.jar
 file.reference.jbcrypt-0.4.jar=E:\\jbcrypt-0.4.jar
@@ -57,7 +59,9 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
     ${file.reference.jaxb-api-2.1.jar-1}:\
     ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
-    ${file.reference.jbcrypt-0.4.jar-1}
+    ${file.reference.jbcrypt-0.4.jar-1}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
