--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,7 @@ file.reference.mysql-connector-j-9.1.0.jar=C:\\SWP SP25\\lib\\mysql-connector-j-
 file.reference.mysql-connector-j-9.1.0.jar-1=C:\\SWP SP25\\lib\\mysql-connector-j-9.1.0.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1new
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1new
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\DUC MINH\\AppData\\Roaming\\NetBeans\\17\\build.properties
