--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
 file.reference.activation-1.1.1.jar=C:\\SWP SP25\\lib\\activation-1.1.1.jar
+file.reference.gson-2.12.1.jar=C:\\SWP SP25\\lib\\gson-2.12.1.jar
+file.reference.jackson-annotations-2.18.3.jar=C:\\SWP SP25\\lib\\jackson-annotations-2.18.3.jar
+file.reference.jackson-core-2.18.3.jar=C:\\SWP SP25\\lib\\jackson-core-2.18.3.jar
+file.reference.jackson-databind-2.18.3.jar=C:\\SWP SP25\\lib\\jackson-databind-2.18.3.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Workspace\\Ky4\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Libraryy\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Workspace\\Ky4\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
@@ -37,6 +41,7 @@ file.reference.jaxb-api-2.1.jar=C:\\Workspace\\Ky4\\jaxb-api-2.1.jar
 file.reference.jaxb-api-2.1.jar-1=D:\\Libraryy\\jaxb-api-2.1.jar
 file.reference.jbcrypt-0.4.jar=E:\\jbcrypt-0.4.jar
 file.reference.jbcrypt-0.4.jar-1=D:\\jbcrypt-0.4.jar
+file.reference.json-20140107.jar=C:\\SWP SP25\\lib\\json-20140107.jar
 file.reference.mysql-connector-j-9.1.0.jar=C:\\Workspace\\Ky4\\mysql-connector-j-9.1.0.jar
 file.reference.mysql-connector-j-9.1.0.jar-1=D:\\Libraryy\\mysql-connector-j-9.1.0.jar
 includes=**
@@ -59,7 +64,12 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-9.1.0.jar-1}:\
     ${file.reference.jbcrypt-0.4.jar-1}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.gson-2.12.1.jar}:\
+    ${file.reference.jackson-annotations-2.18.3.jar}:\
+    ${file.reference.jackson-core-2.18.3.jar}:\
+    ${file.reference.jackson-databind-2.18.3.jar}:\
+    ${file.reference.json-20140107.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
